@@ -1,71 +1,0 @@
-@comment $NetBSD: PLIST,v 1.4 2011/01/12 09:17:29 obache Exp $
-include/goocanvas-1.0/goocanvas.h
-include/goocanvas-1.0/goocanvasellipse.h
-include/goocanvas-1.0/goocanvasenumtypes.h
-include/goocanvas-1.0/goocanvasgrid.h
-include/goocanvas-1.0/goocanvasgroup.h
-include/goocanvas-1.0/goocanvasimage.h
-include/goocanvas-1.0/goocanvasitem.h
-include/goocanvas-1.0/goocanvasitemmodel.h
-include/goocanvas-1.0/goocanvasitemsimple.h
-include/goocanvas-1.0/goocanvasmarshal.h
-include/goocanvas-1.0/goocanvaspath.h
-include/goocanvas-1.0/goocanvaspolyline.h
-include/goocanvas-1.0/goocanvasrect.h
-include/goocanvas-1.0/goocanvasstyle.h
-include/goocanvas-1.0/goocanvastable.h
-include/goocanvas-1.0/goocanvastext.h
-include/goocanvas-1.0/goocanvasutils.h
-include/goocanvas-1.0/goocanvaswidget.h
-lib/libgoocanvas.la
-lib/pkgconfig/goocanvas.pc
-share/gtk-doc/html/goocanvas/GooCanvas.html
-share/gtk-doc/html/goocanvas/GooCanvasEllipse.html
-share/gtk-doc/html/goocanvas/GooCanvasEllipseModel.html
-share/gtk-doc/html/goocanvas/GooCanvasGrid.html
-share/gtk-doc/html/goocanvas/GooCanvasGridModel.html
-share/gtk-doc/html/goocanvas/GooCanvasGroup.html
-share/gtk-doc/html/goocanvas/GooCanvasGroupModel.html
-share/gtk-doc/html/goocanvas/GooCanvasImage.html
-share/gtk-doc/html/goocanvas/GooCanvasImageModel.html
-share/gtk-doc/html/goocanvas/GooCanvasItem.html
-share/gtk-doc/html/goocanvas/GooCanvasItemModel.html
-share/gtk-doc/html/goocanvas/GooCanvasItemModelSimple.html
-share/gtk-doc/html/goocanvas/GooCanvasItemSimple.html
-share/gtk-doc/html/goocanvas/GooCanvasPath.html
-share/gtk-doc/html/goocanvas/GooCanvasPathModel.html
-share/gtk-doc/html/goocanvas/GooCanvasPolyline.html
-share/gtk-doc/html/goocanvas/GooCanvasPolylineModel.html
-share/gtk-doc/html/goocanvas/GooCanvasRect.html
-share/gtk-doc/html/goocanvas/GooCanvasRectModel.html
-share/gtk-doc/html/goocanvas/GooCanvasStyle.html
-share/gtk-doc/html/goocanvas/GooCanvasTable.html
-share/gtk-doc/html/goocanvas/GooCanvasTableModel.html
-share/gtk-doc/html/goocanvas/GooCanvasText.html
-share/gtk-doc/html/goocanvas/GooCanvasTextModel.html
-share/gtk-doc/html/goocanvas/GooCanvasWidget.html
-share/gtk-doc/html/goocanvas/ch01.html
-share/gtk-doc/html/goocanvas/ch02.html
-share/gtk-doc/html/goocanvas/ch03.html
-share/gtk-doc/html/goocanvas/ch04.html
-share/gtk-doc/html/goocanvas/ch05.html
-share/gtk-doc/html/goocanvas/goocanvas-GooCanvas-Types.html
-share/gtk-doc/html/goocanvas/goocanvas-architecture.html
-share/gtk-doc/html/goocanvas/goocanvas-coordinates.html
-share/gtk-doc/html/goocanvas/goocanvas-creating-items.html
-share/gtk-doc/html/goocanvas/goocanvas-model-view-canvas.html
-share/gtk-doc/html/goocanvas/goocanvas-overview.html
-share/gtk-doc/html/goocanvas/goocanvas-simple-canvas.html
-share/gtk-doc/html/goocanvas/goocanvas-wysiwyg.html
-share/gtk-doc/html/goocanvas/goocanvas.devhelp
-share/gtk-doc/html/goocanvas/goocanvas.devhelp2
-share/gtk-doc/html/goocanvas/home.png
-share/gtk-doc/html/goocanvas/index.html
-share/gtk-doc/html/goocanvas/index.sgml
-share/gtk-doc/html/goocanvas/left.png
-share/gtk-doc/html/goocanvas/right.png
-share/gtk-doc/html/goocanvas/style.css
-share/gtk-doc/html/goocanvas/up.png
-share/locale/en_GB/LC_MESSAGES/goocanvas.mo
-share/locale/es/LC_MESSAGES/goocanvas.mo
-share/locale/ja/LC_MESSAGES/goocanvas.mo
